--- a/HTFLMS/HTFLMS.csproj
+++ b/HTFLMS/HTFLMS.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.23" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.3.9" />
   </ItemGroup>
 
 </Project>
